doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\HP\Documents\Java Projects\Class12
-d
C:\Users\HP\Documents\Java Projects\Class12\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\HP\Documents\Java Projects\Class12\mishra.java
<---- end of javadoc command ---->
Loading source file C:\Users\HP\Documents\Java Projects\Class12\mishra.java...
C:\Users\HP\Documents\Java Projects\Class12\mishra.java:4: error: reached end of file while parsing
        Scanner sc=new Scanner(System.in);
                                          ^
1 error
